Mobile Fixed
The webpage wont break on mobile

--- a/style.css
+++ b/style.css
@@ -80,13 +80,33 @@
   }
   #center {
     position:absolute;
-    left:50%;
-    top:50%;
+    left: 50%;
+    top: 8%;
     transform:translate(-50%,-50%);
     -webkit-transform:translate(-50%,-50%);
     -moz-transform:translate(-50%,-50%);
     -ms-transform:translate(-50%,-50%);
     -o-transform:translate(-50%,-50%)
+  }
+  #center2 {
+    position:absolute;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%,-50%);
+    -webkit-transform:translate(-50%,-50%);
+    -moz-transform:translate(-50%,-50%);
+    -ms-transform:translate(-50%,-50%);
+    -o-transform:translate(-50%,-50%)
+  }
+  #center3 {
+    position: absolute;
+    left: 50%;
+    top: 26%;
+    transform:translate(-50%,-50%);
+    -webkit-transform:translate(-50%,-50%);
+    -moz-transform:translate(-50%,-50%);
+    -ms-transform:translate(-50%,-50%);
+    -o-transform:translate(-50%,-50%) 
   }
   #overlay-toggle:checked ~ .overlay {
     animation-fill-mode: forwards;
@@ -119,12 +139,12 @@
     }
   }
 h2 {
-  padding: 8cm;
+  padding: 8%;
   text-align: center;
   font-family: derk;
   text-shadow: 0 0 0.40em rgb(80, 115, 255);
 }
 span {
   color: aquamarine;
-  text-shadow: 0 0 0.40em beige
+  text-shadow: 0 0 0.40em rgb(62, 62, 10)
 }
